@@ -1,7 +1,5 @@
 package thelm.jaopca.compat.crossroads;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
@@ -34,7 +32,7 @@ import thelm.jaopca.utils.MiscHelper;
 @JAOPCAModule(modDependencies = "crossroads")
 public class CrossroadsModule implements IModule {
 
-	private static final Set<String> BLACKLIST = new TreeSet<>(Arrays.asList(
+	private static final Set<String> BLACKLIST = new TreeSet<>(List.of(
 			"copper", "gold", "iron", "tin"));
 
 	private Map<IMaterial, IDynamicSpecConfig> configs;
@@ -43,6 +41,7 @@ public class CrossroadsModule implements IModule {
 			setMaterialTypes(MaterialType.INGOT, MaterialType.INGOT_LEGACY).setSecondaryName("crossroads:grits").setDefaultMaterialBlacklist(BLACKLIST);
 	private final IForm clumpForm = ApiImpl.INSTANCE.newForm(this, "crossroads_clumps", ItemFormType.INSTANCE).
 			setMaterialTypes(MaterialType.INGOT, MaterialType.INGOT_LEGACY).setSecondaryName("crossroads:clumps").setDefaultMaterialBlacklist(BLACKLIST);
+	private final IFormRequest formRequest = ApiImpl.INSTANCE.newFormRequest(this, gritForm, clumpForm).setGrouped(true);
 
 	@Override
 	public String getName() {
@@ -60,7 +59,7 @@ public class CrossroadsModule implements IModule {
 
 	@Override
 	public List<IFormRequest> getFormRequests() {
-		return Collections.singletonList(ApiImpl.INSTANCE.newFormRequest(this, gritForm, clumpForm));
+		return List.of(formRequest);
 	}
 
 	@Override
@@ -84,9 +83,15 @@ public class CrossroadsModule implements IModule {
 		CrossroadsHelper helper = CrossroadsHelper.INSTANCE;
 		IMiscHelper miscHelper = MiscHelper.INSTANCE;
 		IItemFormType itemFormType = ItemFormType.INSTANCE;
-		for(IMaterial material : gritForm.getMaterials()) {
-			ResourceLocation oreLocation = miscHelper.getTagLocation("ores", material.getName());
+		for(IMaterial material : formRequest.getMaterials()) {
 			IItemInfo gritInfo = itemFormType.getMaterialFormInfo(gritForm, material);
+			ResourceLocation gritLocation = miscHelper.getTagLocation("crossroads:grits", material.getName());
+			IItemInfo clumpInfo = itemFormType.getMaterialFormInfo(clumpForm, material);
+			ResourceLocation clumpLocation = miscHelper.getTagLocation("crossroads:clumps", material.getName());
+			ResourceLocation oreLocation = miscHelper.getTagLocation("ores", material.getName());
+			ResourceLocation nuggetLocation = miscHelper.getTagLocation("nuggets", material.getName());
+			ResourceLocation moltenLocation = miscHelper.getTagLocation("molten", material.getName(), "_");
+
 			if(material.getType() == MaterialType.INGOT) {
 				ResourceLocation rawMaterialLocation = miscHelper.getTagLocation("raw_materials", material.getName());
 				helper.registerStampMillRecipe(
@@ -98,11 +103,7 @@ public class CrossroadsModule implements IModule {
 						new ResourceLocation("jaopca", "crossroads.ore_to_grit."+material.getName()),
 						oreLocation, gritInfo, 3);
 			}
-		}
-		for(IMaterial material : clumpForm.getMaterials()) {
-			ResourceLocation oreLocation = miscHelper.getTagLocation("ores", material.getName());
-			ResourceLocation gritLocation = miscHelper.getTagLocation("crossroads:grits", material.getName());
-			IItemInfo clumpInfo = itemFormType.getMaterialFormInfo(clumpForm, material);
+
 			if(material.getType() == MaterialType.INGOT) {
 				ResourceLocation rawMaterialLocation = miscHelper.getTagLocation("raw_materials", material.getName());
 				helper.registerOreCleanserRecipe(
@@ -117,13 +118,29 @@ public class CrossroadsModule implements IModule {
 			helper.registerOreCleanserRecipe(
 					new ResourceLocation("jaopca", "crossroads.grit_to_clump."+material.getName()),
 					gritLocation, clumpInfo, 1);
+
+			helper.registerBlastFurnaceRecipe(
+					new ResourceLocation("jaopca", "crossroads.grit_to_molten."+material.getName()),
+					gritLocation, moltenLocation, 90, 2);
+			helper.registerBlastFurnaceRecipe(
+					new ResourceLocation("jaopca", "crossroads.clump_to_molten."+material.getName()),
+					clumpLocation, moltenLocation, 90, 1);
+			api.registerSmeltingRecipe(
+					new ResourceLocation("jaopca", "crossroads.grit_to_nugget."+material.getName()),
+					gritLocation, nuggetLocation, 7, 0.7F, 200);
+			api.registerBlastingRecipe(
+					new ResourceLocation("jaopca", "crossroads.grit_to_nugget_blasting."+material.getName()),
+					gritLocation, nuggetLocation, 7, 0.7F, 100);
+			api.registerSmeltingRecipe(
+					new ResourceLocation("jaopca", "crossroads.clump_to_nugget."+material.getName()),
+					clumpLocation, nuggetLocation, 7, 0.7F, 200);
+			api.registerBlastingRecipe(
+					new ResourceLocation("jaopca", "crossroads.clump_to_nugget_blasting."+material.getName()),
+					clumpLocation, nuggetLocation, 7, 0.7F, 100);
 		}
 		for(IMaterial material : moduleData.getMaterials()) {
 			ResourceLocation oreLocation = miscHelper.getTagLocation("ores", material.getName());
-			ResourceLocation gritLocation = miscHelper.getTagLocation("crossroads:grits", material.getName());
-			ResourceLocation clumpLocation = miscHelper.getTagLocation("crossroads:clumps", material.getName());
 			ResourceLocation dustLocation = miscHelper.getTagLocation("dusts", material.getName());
-			ResourceLocation nuggetLocation = miscHelper.getTagLocation("nuggets", material.getName());
 			ResourceLocation moltenLocation = miscHelper.getTagLocation("molten", material.getName(), "_");
 
 			IDynamicSpecConfig config = configs.get(material);
@@ -157,26 +174,6 @@ public class CrossroadsModule implements IModule {
 						new ResourceLocation("jaopca", "crossroads.ore_to_molten_crucible."+material.getName()),
 						oreLocation, moltenLocation, 180);
 			}
-
-			helper.registerBlastFurnaceRecipe(
-					new ResourceLocation("jaopca", "crossroads.grit_to_molten."+material.getName()),
-					gritLocation, moltenLocation, 90, 2);
-			helper.registerBlastFurnaceRecipe(
-					new ResourceLocation("jaopca", "crossroads.clump_to_molten."+material.getName()),
-					clumpLocation, moltenLocation, 90, 1);
-
-			api.registerSmeltingRecipe(
-					new ResourceLocation("jaopca", "crossroads.grit_to_nugget."+material.getName()),
-					gritLocation, nuggetLocation, 7, 0.7F, 200);
-			api.registerBlastingRecipe(
-					new ResourceLocation("jaopca", "crossroads.grit_to_nugget_blasting."+material.getName()),
-					gritLocation, nuggetLocation, 7, 0.7F, 100);
-			api.registerSmeltingRecipe(
-					new ResourceLocation("jaopca", "crossroads.clump_to_nugget."+material.getName()),
-					clumpLocation, nuggetLocation, 7, 0.7F, 200);
-			api.registerBlastingRecipe(
-					new ResourceLocation("jaopca", "crossroads.clump_to_nugget_blasting."+material.getName()),
-					clumpLocation, nuggetLocation, 7, 0.7F, 100);
 		}
 	}
 }
