@@ -1,7 +1,7 @@
 package thelm.jaopca.compat.electrodynamics;
 
-import java.util.Arrays;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
 
@@ -18,7 +18,7 @@ import thelm.jaopca.utils.MiscHelper;
 @JAOPCAModule(modDependencies = "electrodynamics")
 public class ElectrodynamicsNonIngotModule implements IModule {
 
-	private static final Set<String> BLACKLIST = new TreeSet<>(Arrays.asList(
+	private static final Set<String> BLACKLIST = new TreeSet<>(List.of(
 			"coal", "diamond", "emerald", "lapis", "niter", "potassiumchloride", "redstone", "salt", "sulfur"));
 
 	@Override
