@@ -1,7 +1,7 @@
 package thelm.jaopca.compat.indreb;
 
-import java.util.Arrays;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
@@ -29,7 +29,7 @@ import thelm.jaopca.utils.MiscHelper;
 @JAOPCAModule(modDependencies = "indreb")
 public class IndRebModule implements IModule {
 
-	private static final Set<String> BLACKLIST = new TreeSet<>(Arrays.asList(
+	private static final Set<String> BLACKLIST = new TreeSet<>(List.of(
 			"copper", "gold", "iron", "lead", "netherite", "netherite_scrap", "tin"));
 
 	private Map<IMaterial, IDynamicSpecConfig> configs;
