@@ -7,13 +7,11 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.maven.artifact.versioning.ArtifactVersion;
-import org.apache.maven.artifact.versioning.InvalidVersionSpecificationException;
-import org.apache.maven.artifact.versioning.VersionRange;
 import org.objectweb.asm.Type;
 
 import com.google.common.base.Predicates;
@@ -28,6 +26,7 @@ import thelm.jaopca.api.modules.IModule;
 import thelm.jaopca.api.modules.JAOPCAModule;
 import thelm.jaopca.api.resources.IInMemoryResourcePack;
 import thelm.jaopca.materials.MaterialHandler;
+import thelm.jaopca.utils.MiscHelper;
 
 public class ModuleHandler {
 
@@ -66,12 +65,12 @@ public class ModuleHandler {
 		MODULES.clear();
 		List<AnnotationData> annotationData = ModList.get().getAllScanData().stream().
 				flatMap(data->data.getAnnotations().stream()).
-				filter(data->JAOPCA_MODULE.equals(data.annotationType())).
-				collect(Collectors.toList());
+				filter(data->JAOPCA_MODULE.equals(data.annotationType())).toList();
+		Predicate<String> modVersionNotLoaded = MiscHelper.INSTANCE.modVersionNotLoaded(LOGGER);
 		for(AnnotationData aData : annotationData) {
 			List<String> deps = (List<String>)aData.annotationData().get("modDependencies");
 			String className = aData.clazz().getClassName();
-			if(deps != null && deps.stream().filter(Predicates.notNull()).anyMatch(ModuleHandler::isModVersionNotLoaded)) {
+			if(deps != null && deps.stream().filter(Predicates.notNull()).anyMatch(modVersionNotLoaded)) {
 				LOGGER.info("Module {} has missing mod dependencies, skipping", className);
 				continue;
 			}
@@ -99,32 +98,6 @@ public class ModuleHandler {
 				LOGGER.fatal("Unable to load module {}", className, e);
 			}
 		}
-	}
-
-	static boolean isModVersionNotLoaded(String dep) {
-		ModList modList = ModList.get();
-		int separatorIndex = dep.lastIndexOf('@');
-		String modId = dep.substring(0, separatorIndex == -1 ? dep.length() : separatorIndex);
-		String spec = separatorIndex == -1 ? "0" : dep.substring(separatorIndex+1);
-		VersionRange versionRange;
-		try {
-			versionRange = VersionRange.createFromVersionSpec(spec);
-		}
-		catch(InvalidVersionSpecificationException e) {
-			LOGGER.warn("Unable to parse version spec {} for mod id {}", spec, modId, e);
-			return true;
-		}
-		if(modList.isLoaded(modId)) {
-			ArtifactVersion version = modList.getModContainerById(modId).get().getModInfo().getVersion();
-			if(versionRange.containsVersion(version)) {
-				return false;
-			}
-			else {
-				LOGGER.warn("Mod {} in version range {} was requested, was {}", modId, versionRange, version);
-				return true;
-			}
-		}
-		return true;
 	}
 
 	public static void computeValidMaterials() {
