@@ -1,6 +1,5 @@
 package thelm.jaopca.modules.passive;
 
-import java.util.Collections;
 import java.util.List;
 
 import net.minecraft.resources.ResourceLocation;
@@ -36,7 +35,7 @@ public class DustsModule implements IModule {
 
 	@Override
 	public List<IFormRequest> getFormRequests() {
-		return Collections.singletonList(dustForm.toRequest());
+		return List.of(dustForm.toRequest());
 	}
 
 	@Override
@@ -44,14 +43,14 @@ public class DustsModule implements IModule {
 		JAOPCAApi api = ApiImpl.INSTANCE;
 		for(IMaterial material : dustForm.getMaterials()) {
 			if(material.getType().isIngot()) {
-				IItemInfo dustInfo = ItemFormType.INSTANCE.getMaterialFormInfo(dustForm, material);
+				ResourceLocation dustLocation = MiscHelper.INSTANCE.getTagLocation("dusts", material.getName());
 				ResourceLocation materialLocation = MiscHelper.INSTANCE.getTagLocation(material.getType().getFormName(), material.getName());
 				api.registerSmeltingRecipe(
 						new ResourceLocation("jaopca", "dusts.to_material."+material.getName()),
-						dustInfo, materialLocation, 1, 0.7F, 200);
+						dustLocation, materialLocation, 1, 0.7F, 200);
 				api.registerBlastingRecipe(
 						new ResourceLocation("jaopca", "dusts.to_material_blasting."+material.getName()),
-						dustInfo, materialLocation, 1, 0.7F, 100);
+						dustLocation, materialLocation, 1, 0.7F, 100);
 			}
 		}
 	}
