@@ -120,7 +120,7 @@ public class InMemoryResourcePack implements IInMemoryResourcePack {
 					String path = rl.getPath();
 					int lastSlash = path.lastIndexOf('/');
 					return filter.test(path.substring(lastSlash < 0 ? 0 : lastSlash));
-				}).collect(Collectors.toList());
+				}).toList();
 	}
 
 	@Override
